fix: fix: verify image display in Download 6 on tablet/mobile; reorder Subtitle above Title in Download 11 Right Card Bottom; align tablet view with desktop; match mobile image position with other cards

--- a/editor-components/download/download11/download11.module.scss
+++ b/editor-components/download/download11/download11.module.scss
@@ -131,7 +131,6 @@
           flex: 1;
           display: flex;
           justify-content: space-between;
-          align-items: center;
 
           .button-card-vertical-content {
             flex: 1;
@@ -168,7 +167,7 @@
   }
 }
 
-@container (max-width: #{$composer-tablet-width}) {
+@container (max-width: #{$composer-phone-width}) {
   .container {
     .max-content {
       .cards {
@@ -210,13 +209,14 @@
           }
 
           .button-card {
-            .button-card-vertical-content {
-              .button-card-image {
-                width: 100%;
-                height: 250px;
-                object-fit: cover;
-                order: -1;
-              }
+            flex-direction: column-reverse;
+            gap: var(--composer-gap-md) !important;
+
+            .button-card-image {
+              width: 100%;
+              height: 250px;
+              object-fit: cover;
+              flex: none;
             }
           }
         }
