--- a/editor-components/download/download6/download6.module.scss
+++ b/editor-components/download/download6/download6.module.scss
@@ -95,13 +95,6 @@
           }
         }
       }
-
-      .right-content {
-        .image {
-          height: 180px !important;
-          object-fit: cover;
-        }
-      }
     }
   }
 }
@@ -143,19 +136,7 @@
         z-index: 1;
 
         .image {
-          width: 100% !important;
-          height: 400px !important;
-          object-fit: cover;
-          border-radius: var(--composer-border-radius-sm);
-          display: block;
-        }
-
-        .overlay {
-          position: absolute;
-          inset: 0;
-          z-index: 2;
-          background-color: var(--composer-overlay-color);
-          border-radius: var(--composer-border-radius-sm);
+          height: 380px !important;
         }
       }
     }
